ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: myapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: myapp.local
    http:
      paths:
        - path: /api
          pathType: Prefix
          backend: 
            service: 
              name: backend-service
              port:
                number: 80
        - path: /images
          pathType: Prefix
          backend:
            service: 
              name: backend-service
              port:
                number: 80
        - path: /
          pathType: Prefix
          backend:
            service: 
              name: frontend-service
              port:
                number: 80
